# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  Request.cpp  Request.hpp  Request_utils.cpp  ServerConfig.cpp  ServerConfig.hpp  ServerSocket.cpp  ServerSocket.hpp  cgiHandler.cpp  conf_net_practice  configFile1  configFile2  functions.hpp  headers.hpp  hello.cprog  helloWorld.c  index.html  kqueue.cpp  level1.html  libraryHeaders.hpp  main.cpp  main_to_test_Request.cpp  makeQueue.cpp  sc.hpp  serverconfig.hpp  socketIO.cpp  test.cpp  test.hpp  testConfigParser.cpp  testerConfig  usefulLinks.txt  webserv
YoupiBanane/: youpi.bad_extension
YoupiBanane/nop/: youpi.bad_extension
cgi-bin/: ccgi.bla  gocgi.run  page.html
cgi-bin/names/: first_part.html  last_part.html  names.py
cgi-bin/textarea/: first_part.html  last_part.html  textarea.py
configs/: tester.conf  webserv.conf
drafts/: kqueue.cpp
errors/: 404.html  5.html
nginx_test/: nginx.conf
nginx_test/data/images/: index.html
nginx_test/data/www/: ddd.html  login.html
pages/: index.html
pages/errors/: 404.html
testers/YoupiBanane/: youpi.bla
testers/YoupiBanane/Yeah/: not_happy.bad_extension
web/errors/: 400.html  401.html  404.html  405.html  413.html  501.html  505.html
web/nginx_test/: nginx.conf
web/pages/: cgi.html  cgi_page.html  input.html
web/z_errors/: 400.html  401.html  404.html  405.html  413.html  501.html  505.html
